# RTS2

./: CMakeLists.txt
inc/: UI.h  audio.h  audioIO.h  audioProcessing.h  echoCanceller.h  fifo.h  i2c_driver.h  utils.h
scripts/: build_and_run.sh
src/: UI.c  audio.c  audioIO.c  audioProcessing.c  echoCanceller.c  fifo.c  i2c_driver.c  main.c
